--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -23,3 +23,18 @@ body {
 .scrollbar-custom::-webkit-scrollbar-track {
   background: #f5f5f5; /* Fundo levemente cinza */
 }
+
+input::-ms-reveal,
+input::-ms-clear,
+input::-webkit-credentials-auto-fill-button,
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+  display: none !important;
+}
+
+.neon-border {
+  box-shadow: 0 0 8px #00e0ff, 0 0 16px #00e0ff, 0 0 24px #00e0ff;
+  border-left: 2px solid #00e0ff;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+}
