--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -32,6 +32,22 @@ input::-webkit-outer-spin-button {
   display: none !important;
 }
 
+@layer utilities {
+  .animate-fade-in {
+    animation: fadeIn 0.3s ease-in-out;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+}
 
 
 @keyframes blink {
